// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-staff-card.vue should be rendered correctly 1`] = `
<div
  bankaccountid="9"
  class="z-data-card-stub"
  createdat="1986-03-23T12:47:49+0900"
  id="1"
  isenabled="true"
  isverified="true"
  location="[object Object]"
  officegroupids="86"
  officeids="59,2,40"
  roleids="1,2"
  title="基本情報"
  updatedat="2023-08-21T17:18:19+0900"
  version="1"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M22,3H2C0.91,3.04 0.04,3.91 0,5V19C0.04,20.09 0.91,20.96 2,21H22C23.09,20.96 23.96,20.09 24,19V5C23.96,3.91 23.09,3.04 22,3M22,19H2V5H22V19M14,17V15.75C14,14.09 10.66,13.25 9,13.25C7.34,13.25 4,14.09 4,15.75V17H14M9,7A2.5,2.5 0 0,0 6.5,9.5A2.5,2.5 0 0,0 9,12A2.5,2.5 0 0,0 11.5,9.5A2.5,2.5 0 0,0 9,7M14,7V8H20V7H14M14,9V10H20V9H14M14,11V12H18V11H14"
    label="社員番号"
    value="0001"
  />
  <z-data-card-item-stub
    icon="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M12,10.5A1.5,1.5 0 0,1 13.5,12A1.5,1.5 0 0,1 12,13.5A1.5,1.5 0 0,1 10.5,12A1.5,1.5 0 0,1 12,10.5M7.5,10.5A1.5,1.5 0 0,1 9,12A1.5,1.5 0 0,1 7.5,13.5A1.5,1.5 0 0,1 6,12A1.5,1.5 0 0,1 7.5,10.5M16.5,10.5A1.5,1.5 0 0,1 18,12A1.5,1.5 0 0,1 16.5,13.5A1.5,1.5 0 0,1 15,12A1.5,1.5 0 0,1 16.5,10.5Z"
    label="状態"
    value="仮登録"
  />
  <z-data-card-item-stub
    icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
    label="氏名"
    value="新井 恵梨香"
  />
  <z-data-card-item-stub
    label="氏名：フリガナ"
    value="アライ エリカ"
  />
  <z-data-card-item-stub
    icon="M7.5,2A2,2 0 0,1 9.5,4A2,2 0 0,1 7.5,6A2,2 0 0,1 5.5,4A2,2 0 0,1 7.5,2M6,7H9A2,2 0 0,1 11,9V14.5H9.5V22H5.5V14.5H4V9A2,2 0 0,1 6,7M16.5,2A2,2 0 0,1 18.5,4A2,2 0 0,1 16.5,6A2,2 0 0,1 14.5,4A2,2 0 0,1 16.5,2M15,22V16H12L14.59,8.41C14.84,7.59 15.6,7 16.5,7C17.4,7 18.16,7.59 18.41,8.41L21,16H18V22H15Z"
    label="性別"
    value="女性"
  />
  <z-data-card-item-stub
    icon="M12,6C13.11,6 14,5.1 14,4C14,3.62 13.9,3.27 13.71,2.97L12,0L10.29,2.97C10.1,3.27 10,3.62 10,4A2,2 0 0,0 12,6M16.6,16L15.53,14.92L14.45,16C13.15,17.29 10.87,17.3 9.56,16L8.5,14.92L7.4,16C6.75,16.64 5.88,17 4.96,17C4.23,17 3.56,16.77 3,16.39V21A1,1 0 0,0 4,22H20A1,1 0 0,0 21,21V16.39C20.44,16.77 19.77,17 19.04,17C18.12,17 17.25,16.64 16.6,16M18,9H13V7H11V9H6A3,3 0 0,0 3,12V13.54C3,14.62 3.88,15.5 4.96,15.5C5.5,15.5 6,15.3 6.34,14.93L8.5,12.8L10.61,14.93C11.35,15.67 12.64,15.67 13.38,14.93L15.5,12.8L17.65,14.93C18,15.3 18.5,15.5 19.03,15.5C20.11,15.5 21,14.62 21,13.54V12A3,3 0 0,0 18,9Z"
    label="生年月日"
  >
    <time
      datetime="1997-12-08"
    >
      平成9年12月8日
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,10 7,12 12,18.71C17,12 17,10 17,9A5,5 0 0,0 12,4Z"
    label="住所"
  >
    〒545-0034
    <br />
    大阪府大阪市阿倍野区阿倍野元町2-6-12
    <!---->
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z"
    label="電話番号"
    value="0731-85-3606"
  />
  <z-data-card-item-stub
    label="FAX番号"
    value="-"
  />
  <z-data-card-item-stub
    icon="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
    label="メールアドレス"
  >
    <a
      href="mailto:lvrjmoem8823@edd.example.com"
    >
      lvrjmoem8823@edd.example.com
    </a>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M13 21L15 20L17 21V14H13M17 9V7L15 8L13 7V9L11 10L13 11V13L15 12L17 13V11L19 10M20 3H4A2 2 0 0 0 2 5V15A2 2 0 0 0 4 17H11V15H4V5H20V15H19V17H20A2 2 0 0 0 22 15V5A2 2 0 0 0 20 3M11 8H5V6H11M9 11H5V9H9M11 14H5V12H11Z"
    label="資格"
  >
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      実務者研修
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      介護福祉士
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      正看護師
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      理学療法士
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      普通自動車免許
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      社会福祉主事任用資格
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      言語聴覚士
    </v-chip-stub>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    label="所属事業所"
  >
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      久留米
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      仙台
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      千葉
    </v-chip-stub>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon=""
    label="所属事業所グループ"
  >
    <!---->
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
          福島
    </v-chip-stub>
    <!---->
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M10 4A4 4 0 0 0 6 8A4 4 0 0 0 10 12A4 4 0 0 0 14 8A4 4 0 0 0 10 4M10 6A2 2 0 0 1 12 8A2 2 0 0 1 10 10A2 2 0 0 1 8 8A2 2 0 0 1 10 6M17 12C16.84 12 16.76 12.08 16.76 12.24L16.5 13.5C16.28 13.68 15.96 13.84 15.72 14L14.44 13.5C14.36 13.5 14.2 13.5 14.12 13.6L13.16 15.36C13.08 15.44 13.08 15.6 13.24 15.68L14.28 16.5V17.5L13.24 18.32C13.16 18.4 13.08 18.56 13.16 18.64L14.12 20.4C14.2 20.5 14.36 20.5 14.44 20.5L15.72 20C15.96 20.16 16.28 20.32 16.5 20.5L16.76 21.76C16.76 21.92 16.84 22 17 22H19C19.08 22 19.24 21.92 19.24 21.76L19.4 20.5C19.72 20.32 20.04 20.16 20.28 20L21.5 20.5C21.64 20.5 21.8 20.5 21.8 20.4L22.84 18.64C22.92 18.56 22.84 18.4 22.76 18.32L21.72 17.5V16.5L22.76 15.68C22.84 15.6 22.92 15.44 22.84 15.36L21.8 13.6C21.8 13.5 21.64 13.5 21.5 13.5L20.28 14C20.04 13.84 19.72 13.68 19.4 13.5L19.24 12.24C19.24 12.08 19.08 12 19 12H17M10 13C7.33 13 2 14.33 2 17V20H11.67C11.39 19.41 11.19 18.77 11.09 18.1H3.9V17C3.9 16.36 7.03 14.9 10 14.9C10.43 14.9 10.87 14.94 11.3 15C11.5 14.36 11.77 13.76 12.12 13.21C11.34 13.08 10.6 13 10 13M18.04 15.5C18.84 15.5 19.5 16.16 19.5 17.04C19.5 17.84 18.84 18.5 18.04 18.5C17.16 18.5 16.5 17.84 16.5 17.04C16.5 16.16 17.16 15.5 18.04 15.5Z"
    label="ロール"
  >
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      システム管理者
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      テスト担当者
    </v-chip-stub>
  </z-data-card-item-stub>
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`z-staff-card.vue should not display roles when hide-roles is true 1`] = `
<div
  bankaccountid="9"
  class="z-data-card-stub"
  createdat="1995-08-11T03:08:49+0900"
  id="2"
  isenabled="true"
  isverified="true"
  location="[object Object]"
  officegroupids="34"
  officeids="21,2"
  roleids="1,2"
  title="基本情報"
  updatedat="1973-08-08T03:22:26+0900"
  version="1"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M22,3H2C0.91,3.04 0.04,3.91 0,5V19C0.04,20.09 0.91,20.96 2,21H22C23.09,20.96 23.96,20.09 24,19V5C23.96,3.91 23.09,3.04 22,3M22,19H2V5H22V19M14,17V15.75C14,14.09 10.66,13.25 9,13.25C7.34,13.25 4,14.09 4,15.75V17H14M9,7A2.5,2.5 0 0,0 6.5,9.5A2.5,2.5 0 0,0 9,12A2.5,2.5 0 0,0 11.5,9.5A2.5,2.5 0 0,0 9,7M14,7V8H20V7H14M14,9V10H20V9H14M14,11V12H18V11H14"
    label="社員番号"
    value="0002"
  />
  <z-data-card-item-stub
    icon="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22C17.53,22 22,17.53 22,12C22,6.47 17.53,2 12,2M14.59,8L12,10.59L9.41,8L8,9.41L10.59,12L8,14.59L9.41,16L12,13.41L14.59,16L16,14.59L13.41,12L16,9.41L14.59,8Z"
    label="状態"
    value="退職"
  />
  <z-data-card-item-stub
    icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,6A2,2 0 0,0 10,8A2,2 0 0,0 12,10A2,2 0 0,0 14,8A2,2 0 0,0 12,6M12,13C14.67,13 20,14.33 20,17V20H4V17C4,14.33 9.33,13 12,13M12,14.9C9.03,14.9 5.9,16.36 5.9,17V18.1H18.1V17C18.1,16.36 14.97,14.9 12,14.9Z"
    label="氏名"
    value="木田 聡美"
  />
  <z-data-card-item-stub
    label="氏名：フリガナ"
    value="キダ サトミ"
  />
  <z-data-card-item-stub
    icon="M7.5,2A2,2 0 0,1 9.5,4A2,2 0 0,1 7.5,6A2,2 0 0,1 5.5,4A2,2 0 0,1 7.5,2M6,7H9A2,2 0 0,1 11,9V14.5H9.5V22H5.5V14.5H4V9A2,2 0 0,1 6,7M16.5,2A2,2 0 0,1 18.5,4A2,2 0 0,1 16.5,6A2,2 0 0,1 14.5,4A2,2 0 0,1 16.5,2M15,22V16H12L14.59,8.41C14.84,7.59 15.6,7 16.5,7C17.4,7 18.16,7.59 18.41,8.41L21,16H18V22H15Z"
    label="性別"
    value="女性"
  />
  <z-data-card-item-stub
    icon="M12,6C13.11,6 14,5.1 14,4C14,3.62 13.9,3.27 13.71,2.97L12,0L10.29,2.97C10.1,3.27 10,3.62 10,4A2,2 0 0,0 12,6M16.6,16L15.53,14.92L14.45,16C13.15,17.29 10.87,17.3 9.56,16L8.5,14.92L7.4,16C6.75,16.64 5.88,17 4.96,17C4.23,17 3.56,16.77 3,16.39V21A1,1 0 0,0 4,22H20A1,1 0 0,0 21,21V16.39C20.44,16.77 19.77,17 19.04,17C18.12,17 17.25,16.64 16.6,16M18,9H13V7H11V9H6A3,3 0 0,0 3,12V13.54C3,14.62 3.88,15.5 4.96,15.5C5.5,15.5 6,15.3 6.34,14.93L8.5,12.8L10.61,14.93C11.35,15.67 12.64,15.67 13.38,14.93L15.5,12.8L17.65,14.93C18,15.3 18.5,15.5 19.03,15.5C20.11,15.5 21,14.62 21,13.54V12A3,3 0 0,0 18,9Z"
    label="生年月日"
  >
    <time
      datetime="1988-10-13"
    >
      昭和63年10月13日
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5M12,2A7,7 0 0,1 19,9C19,14.25 12,22 12,22C12,22 5,14.25 5,9A7,7 0 0,1 12,2M12,4A5,5 0 0,0 7,9C7,10 7,12 12,18.71C17,12 17,10 17,9A5,5 0 0,0 12,4Z"
    label="住所"
  >
    〒759-6524
    <br />
    山口県下関市吉見上2-16-17
    <!---->
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z"
    label="電話番号"
    value="0550-08-3091"
  />
  <z-data-card-item-stub
    label="FAX番号"
    value="-"
  />
  <z-data-card-item-stub
    icon="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
    label="メールアドレス"
  >
    <a
      href="mailto:byyjgonh5248@vhl.example3.co.jp"
    >
      byyjgonh5248@vhl.example3.co.jp
    </a>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M13 21L15 20L17 21V14H13M17 9V7L15 8L13 7V9L11 10L13 11V13L15 12L17 13V11L19 10M20 3H4A2 2 0 0 0 2 5V15A2 2 0 0 0 4 17H11V15H4V5H20V15H19V17H20A2 2 0 0 0 22 15V5A2 2 0 0 0 20 3M11 8H5V6H11M9 11H5V9H9M11 14H5V12H11Z"
    label="資格"
  >
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      喀痰吸引研修
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      正看護師
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      作業療法士
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      普通自動車免許
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      福祉用具専門相談員
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      はり師
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      きゅう師
    </v-chip-stub>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    label="所属事業所"
  >
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      世田谷
    </v-chip-stub>
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
      仙台
    </v-chip-stub>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon=""
    label="所属事業所グループ"
  >
    <!---->
    <v-chip-stub
      active="true"
      activeclass=""
      closeicon="$delete"
      closelabel="$vuetify.close"
      filtericon="$complete"
      label="true"
      small="true"
      tag="span"
    >
          福島
    </v-chip-stub>
  </z-data-card-item-stub>
  <!---->
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;
